@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Sqitch
 
 0.61
+     - Changed the `current_changes()` and `current_tags()` Engine methods so
+       that they return iterator code references instead of lists.
 
 0.60  2012-07-07T11:12:26Z
      - Removed some discussion of VCS integration, since it is not yet
